commit na majsterze, wlasciwy, tamto to sciema

--- a/index_dla_gita.html
+++ b/index_dla_gita.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>tytul</title>
+    dopiero to jest commit na majsterze
 </head>
 <body>
 pierwszy commit
